# genslides

./: .env.example  .gitignore  DOCKER-SETUP.md  DOCKER.md  Makefile  README.md  docker-compose.yml  quick-start.sh  test-deployment.sh
.chats/: 20260207.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: __init__.py  images.py  slides.py  style.py  websocket.py
backend/app/api/schemas/: __init__.py  images.py  slides.py  style.py
backend/app/models/: __init__.py  project.py  slide.py  style.py
backend/app/repositories/: __init__.py  image_repository.py  slides_repository.py  style_repository.py
backend/app/services/: __init__.py  cost_service.py  export_service.py  gemini_service.py  image_generation_service.py  image_service.py  nano_banana_service.py  slides_service.py  style_service.py  volcengine_service.py
backend/app/utils/: __init__.py  file.py  hash.py
backend/slides/rust-bq5tmq/: outline.yml
backend/tests/: conftest.py  test_slides.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  ProjectEditor.tsx  main.tsx
slides/datatype-5d90kw/: outline.yml
slides/dog-0kcdlk/: outline.yml
slides/sf-5wkbd8/: outline.yml
specs/: 0003-ascii-chart.md  0004-style.md  instructions.md
(+64 files in other folders)
